--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -5,7 +5,20 @@
    "metadata": {},
    "source": [
     "# Agenda\n",
-    "\n"
+    "\n",
+    "1. Intro to objects\n",
+    "    - What are objects?\n",
+    "    - In Python, everything is an object -- so what?\n",
+    "    - Creating your own data structures (in general)\n",
+    "    - Creating your own classes (i.e., new types of data, new object types)\n",
+    "    - What happens when you create a new object?\n",
+    "    - Complex objects and composition\n",
+    "    - Attributes in our objects\n",
+    "2. Methods\n",
+    "    - Using methods\n",
+    "    - Writing methods\n",
+    "    - The `self` parameter in methods\n",
+    "    - Other parameters and passing arguments to them"
    ]
   },
   {
