--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -18,7 +18,12 @@
     "    - Using methods\n",
     "    - Writing methods\n",
     "    - The `self` parameter in methods\n",
-    "    - Other parameters and passing arguments to them"
+    "    - Other parameters and passing arguments to them\n",
+    "3. Tomorrow:\n",
+    "    - Class attributes\n",
+    "    - Inheritance\n",
+    "    - How objects really work behind the scenes\n",
+    "    - Dunder (\"magic\") methods that let us customize our objects"
    ]
   },
   {
