--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -36,7 +36,15 @@
     "\n",
     "In the 1970s, people were overwhelmed by software and its complexity -- especially when they wanted to maintain/debug/change software. They wanted a new way to write code that would make it easier to understand and maintain.\n",
     "\n",
-    "Alan Kay, work"
+    "Alan Kay, working at Xerox PARC, designed a new programming language called Smalltalk. Smalltalk used \"objects.\" What did that mean?\n",
+    "\n",
+    "Kay talked about the human body and biological systems as being hugely complex and yet working well. This happens because the body is divided into many cells. Each cell has a different type -- nerve cells, skin cells, fat cells, muscle cells. Each type of cell sends and receives different types of messages.\n",
+    "\n",
+    "Smalltalk was designed such that each type of data you wanted to work with had a \"type\" that determined what messages it would send and receive. The messages were known as \"methods,\" but they were really glorified function calls. The idea was that you could know what types of messages were sent and received by a particular piece of data, based on its type.\n",
+    "\n",
+    "The idea:\n",
+    "\n",
+    "- Instead of cells, we haefv o"
    ]
   }
  ],
