--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -44,8 +44,23 @@
     "\n",
     "The idea:\n",
     "\n",
-    "- Instead of cells, we haefv o"
+    "- Instead of cells, we have objects\n",
+    "- Instead of types of cells, we have classes\n",
+    "- Instead of messages, we have methods\n",
+    "\n",
+    "These terms are hard for people, because they are different from the rest of programming. Nearly every programming language today uses objects in some way or another. \n",
+    "\n",
+    "Why do we need objects? To make our code easier to understand, read, and write. It's really a system for packaging our software, so that it's easier to do those things.\n",
+    "\n",
+    "There are still object skeptics, who say that there really isn't any huge advantage in using them. But most programmers and most languages are pushing us to use objects, because they can make things easier to build and maintain."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
