--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -52,7 +52,9 @@
     "\n",
     "Why do we need objects? To make our code easier to understand, read, and write. It's really a system for packaging our software, so that it's easier to do those things.\n",
     "\n",
-    "There are still object skeptics, who say that there really isn't any huge advantage in using them. But most programmers and most languages are pushing us to use objects, because they can make things easier to build and maintain."
+    "There are still object skeptics, who say that there really isn't any huge advantage in using them. But most programmers and most languages are pushing us to use objects, because they can make things easier to build and maintain.\n",
+    "\n",
+    "For some people, objects are almost a religion. If you do things the object way, then you're right. And if you don't, then you're wrong. Python doesn't have this approach at all! Python encourages you to use objects, and all of the data is packaged as objects, and we'll use methods, as well -- but if you want to write non-object code, you completely can do that in Python."
    ]
   },
   {
