--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -58,6 +58,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Everything is an object\n",
+    "\n",
+    "We love to say this in Python. But what does it mean? Why do we care?\n",
+    "\n",
+    "- We can apply the same rules to objects that we define and design as apply to the internal, builtin objects that Python defines. There aren't two sets of rules; the rules are consistent.\n",
+    "- If we want to improve/extend the system, there is a standard way to do that by writing new classes.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
