--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -71,11 +71,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Jargon/vocabulary\n",
+    "\n",
+    "- `class` and `type` -- these words are interchangeable when we speak, but they have different roles in Python itself. The idea is that each class/type is a category of value. You've seen classes before -- `str` is a class, as is `int`. The big deal with object-oriented programming is that you can create new types/classes, and they will be no more and no less a part of Python than `str` and `int`.\n",
+    "    - `'abcd'` is a string, meaning that it's an *instance* of `str`.\n",
+    "    - Another way to say this is that `str` is the *class* of `'abcd'`\n",
+    "    - Another way to say this is that `str` is the *type* of `'abcd'`.\n",
+    "    - `str`, the type, can also be used to create new instances of `str`, i.e., new strings. "
+   ]
   }
  ],
  "metadata": {
