--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -80,7 +80,12 @@
     "    - `'abcd'` is a string, meaning that it's an *instance* of `str`.\n",
     "    - Another way to say this is that `str` is the *class* of `'abcd'`\n",
     "    - Another way to say this is that `str` is the *type* of `'abcd'`.\n",
-    "    - `str`, the type, can also be used to create new instances of `str`, i.e., new strings. "
+    "    - `str`, the type, can also be used to create new instances of `str`, i.e., new strings. So when you say `str(5)`, you're creating a new `str` instance based on the `int` object `5`.\n",
+    "- If we want to create a new object of type `X`, then we invoke `X()` and get a new value back of type `X`.\n",
+    "    - I can create a new `int` with `int()`\n",
+    "    - I can create a new `str` with `str()`\n",
+    "    - I can create a new `list` with `list()`\n",
+    "- `instance` is another word for \"value,\" but it mentions the class. Every value in Python is an *instance* of some type. So `'abcd'` is an instance of `str`, and `5` is an instance of `int`. If you want to find out the type of a given object, you can invoke the `type` builtin function. It'll return the type of an object."
    ]
   }
  ],
