--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -153,7 +153,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# So what? Why do we care about an object's "
+    "# So what? Why do we care about an object's type/class?\n",
+    "\n",
+    "It tells us everything we need to know about how that object will behave.\n",
+    "\n",
+    "We can, based on the class, konw:\n",
+    "\n",
+    "- What type of data it stores\n",
+    "- What methods we can invoke\n",
+    "- What operators we can use\n",
+    "- What values we'll get back from each method and operator\n",
+    "- What inputs it can take, and what outputs it provides\n",
+    "\n",
+    "If we see data of a type we know, then we can make lots of assumptions about it. If we see data of a type we don't know, then we should go study the documentation for it, so that we can "
    ]
   }
  ],
