--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -169,6 +169,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Do we really need objects?\n",
+    "\n",
+    "No! They are helpful, and they help us to organize our code, but computers and programs will still exist and work even if we never create any of our own classes.\n",
+    "\n",
+    "There are still some languages that don't have any objects."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's create a data structure that keeps track of a person\n",
+    "# it'll hold first name, last name, and shoe size\n",
+    "\n",
+    "p = ('Reuven', 'Lerner', 46)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tuple"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# p is an object of type tuple\n",
+    "\n",
+    "type(p)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
