--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -336,10 +336,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# the function and the tuple were defined separately\n",
+    "# in the world of objects, we want them to be joined at the hip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Python, functions, classes, and capitalization\n",
+    "\n",
+    "Both functions and classes in Python are what we call \"callables,\" because we can \"invoke\" them with `()`. For this reason, it's easy to get confused:\n",
+    "\n",
+    "- `int` is a class\n",
+    "- `collections.Counter` is a class, too\n",
+    "\n",
+    "This gets worse because modern Python conventions tell us to Capitalize or CamelCase our class names, but snake_case our function names"
+   ]
   }
  ],
  "metadata": {
