--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -355,7 +355,12 @@
     "- `int` is a class\n",
     "- `collections.Counter` is a class, too\n",
     "\n",
-    "This gets worse because modern Python conventions tell us to Capitalize or CamelCase our class names, but snake_case our function names"
+    "This gets worse because modern Python conventions tell us to Capitalize or CamelCase our class names, but snake_case our function names. What gives with `int` and `str`, then?\n",
+    "\n",
+    "Those core data structures were grandfathered. They are the only exceptions, though; most classes in Python adhere to the CamelCase rule.\n",
+    "\n",
+    "There are people who call `int` a function, even though it isn't! There are others who say that we shouldn't dwell on whether it's a function or a class, and just call it a \"callable\" or a \"builtin.\"\n",
+    "\n"
    ]
   }
  ],
