--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -362,6 +362,28 @@
     "There are people who call `int` a function, even though it isn't! There are others who say that we shouldn't dwell on whether it's a function or a class, and just call it a \"callable\" or a \"builtin.\"\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What are operators?  \n",
+    "\n",
+    "Symbols we can use in Python expressions. They are, behind the scenes, transformed into methods.\n",
+    "\n",
+    "- `+` is the addition operator\n",
+    "- `-` is the subtraction operator\n",
+    "- `=` is the assignment operator\n",
+    "- `==` is the equality operator\n",
+    "- `[]` is the \"retrieve an element\" operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
