--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -379,6 +379,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's the problem with what we did above with `p`?\n",
+    "\n",
+    "1. We lost the advantage of *abstraction*. We're thinking in terms of tuples, not in terms of people.\n",
+    "2. There's no guarantee that `fullname` will be given a tuple, or the right kind of tuple, as an argument. In object-oriented programming, we combine our data and our functionality to make this less likely.\n",
+    "3. It's annoying to think about index 0 and index 1 instead of \"first name\" and \"last name.\"\n",
+    "\n",
+    "If we use a class, we can solve *all* of these problems!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
