--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -392,6 +392,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Non-object objects\n",
+    "\n",
+    "1. Define two 3-element tuples, each containing information about a company, with fields for the company's name, URL, and the number of employees. Create two such tuples, one for each of two companies.\n",
+    "2. Write a function that expects to get that tuple, and returns a string -- a link to the company's URL with the company name.\n",
+    "3. What happens if you run `type` on your tuple?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
