--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -502,8 +502,16 @@
    "source": [
     "# What's wrong with this?\n",
     "\n",
-    "1. We are working at a low level, not a higher"
+    "1. We are working at a low level, not a higher level of abstraction that lets us think about companies vs. tuples\n",
+    "2. There is no formal connection between our tuples and our function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
