--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -507,6 +507,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How can we rewrite this has a class?\n",
+    "\n",
+    "- We'll need to define a new data structure, a new class/type, each of whose instances represent a company\n",
+    "- We'll then need to define methods (functions) and attach them to the class\n",
+    "\n",
+    "This will solve all of our problems. We will have that higher level of abstraction *and* we'll be able to invoke a method directly on the data, rather than making the connection ourselves. We'll also have access to the values in a better, more readable way than tuple indexes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
