--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -523,7 +523,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# here is a class Person that does what I had before\n",
+    "\n",
+    "class Person:     # this is where we tell Python -- I'm defining a new type of data\n",
+    "\n",
+    "    # inside of my class, I have indentation, and here we define methods\n",
+    "    # the first method I'll define is called __init__ (\"dunder init,\" meaning \"double underscore before and after init\")\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
