--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,8 +530,23 @@
     "\n",
     "    # inside of my class, I have indentation, and here we define methods\n",
     "    # the first method I'll define is called __init__ (\"dunder init,\" meaning \"double underscore before and after init\")\n",
-    "    "
+    "\n",
+    "    # the first parameter for a method must be \"self\"\n",
+    "    # when someone creates a new instance of Person, they must give us arguments for the 3 parameters after self\n",
+    "    def __init__(self, first_name, last_name, shoe_size):\n",
+    "\n",
+    "        # take \n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.shoe_size = shoe_size"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
