--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,10 +535,106 @@
     "    # when someone creates a new instance of Person, they must give us arguments for the 3 parameters after self\n",
     "    def __init__(self, first_name, last_name, shoe_size):\n",
     "\n",
-    "        # take \n",
+    "        # take each parameter, and use its value to add a new attribute to our new object\n",
     "        self.first_name = first_name\n",
     "        self.last_name = last_name\n",
-    "        self.shoe_size = shoe_size"
+    "        self.shoe_size = shoe_size\n",
+    "\n",
+    "p = Person('Reuven', 'Lerner', 46)          # I've created a new Person object with the 3 values from before "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Reuven'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# I can now retrieve those values:\n",
+    "\n",
+    "p.first_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Lerner'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.last_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.shoe_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Person"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We can say:\n",
+    "\n",
+    "- I've created a new `Person` class, a new data type for representing information about a person\n",
+    "- Each instance of `Person` is a new person object, representing a different person with their own first/last names and shoe size\n",
+    "- If `p` is an instance of `Person`, then we can also say that `type(p)` is `Person`\n",
+    "- We can retrieve any attributes we've set on `p` with a `.` and the attribute name."
    ]
   },
   {
