--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -653,7 +653,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Person:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's going on?\n",
+    "\n",
+    "1. The `class` keyword in Python tells the language that we want to define a new type of data, parallel to `str`, `list`, `dict`, and all of the others. Our class (data type) will be just as capable as those builtin data types.\n",
+    "2. When we define a class, we give it a name. Traditionally, that name is in `CamelCase`.\n",
+    "3. We need a colon at the end of the line, indicating that we're about to open an indented block.\n",
+    "4. "
+   ]
   }
  ],
  "metadata": {
