--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -655,7 +655,7 @@
    "outputs": [],
    "source": [
     "class Person:\n",
-    "    "
+    "    def __init__(self, first_name, last_name, shoe_size):"
    ]
   },
   {
@@ -666,8 +666,10 @@
     "\n",
     "1. The `class` keyword in Python tells the language that we want to define a new type of data, parallel to `str`, `list`, `dict`, and all of the others. Our class (data type) will be just as capable as those builtin data types.\n",
     "2. When we define a class, we give it a name. Traditionally, that name is in `CamelCase`.\n",
-    "3. We need a colon at the end of the line, indicating that we're about to open an indented block.\n",
-    "4. "
+    "3. We need a colon at the end of the line, indicating that we're about to open an indented block. That block is known as the \"class body.\" Most of the class body will consist of method definitions, all starting with `def`. We will see some other things we can put there tomorrow.\n",
+    "4. When we use `def` inside of a class body, we're defining a *method*, a function that is connected to our data type. Only objects of type `Person` will be able to use any method defined here.\n",
+    "5. `__init__` is a special method, a *magic* method, that is invoked by Python automatically when we create a new instance. We'll talk about that in a moment.\n",
+    "6. In our `__init__`, we define it with "
    ]
   }
  ],
