--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -669,8 +669,15 @@
     "3. We need a colon at the end of the line, indicating that we're about to open an indented block. That block is known as the \"class body.\" Most of the class body will consist of method definitions, all starting with `def`. We will see some other things we can put there tomorrow.\n",
     "4. When we use `def` inside of a class body, we're defining a *method*, a function that is connected to our data type. Only objects of type `Person` will be able to use any method defined here.\n",
     "5. `__init__` is a special method, a *magic* method, that is invoked by Python automatically when we create a new instance. We'll talk about that in a moment.\n",
-    "6. In our `__init__`, we define it with "
+    "6. We define our `__init__` with four parameters: `self` (which is mandatory for any method), then three more parameters. `self` will be assigned the instance of `Person` on which we're running, and that'll happen automatically. The other three parameters get their values from the arguments we pass to `Person` when we invoke it."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
