--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -655,7 +655,8 @@
    "outputs": [],
    "source": [
     "class Person:\n",
-    "    def __init__(self, first_name, last_name, shoe_size):"
+    "    def __init__(self, first_name, last_name, shoe_size):\n",
+    "        "
    ]
   },
   {
@@ -669,7 +670,9 @@
     "3. We need a colon at the end of the line, indicating that we're about to open an indented block. That block is known as the \"class body.\" Most of the class body will consist of method definitions, all starting with `def`. We will see some other things we can put there tomorrow.\n",
     "4. When we use `def` inside of a class body, we're defining a *method*, a function that is connected to our data type. Only objects of type `Person` will be able to use any method defined here.\n",
     "5. `__init__` is a special method, a *magic* method, that is invoked by Python automatically when we create a new instance. We'll talk about that in a moment.\n",
-    "6. We define our `__init__` with four parameters: `self` (which is mandatory for any method), then three more parameters. `self` will be assigned the instance of `Person` on which we're running, and that'll happen automatically. The other three parameters get their values from the arguments we pass to `Person` when we invoke it."
+    "6. We define our `__init__` with four parameters: `self` (which is mandatory for any method), then three more parameters. `self` will be assigned the instance of `Person` on which we're running, and that'll happen automatically. The other three parameters get their values from the arguments we pass to `Person` when we invoke it.\n",
+    "7. The job of `__init__` is to assign attributes (i.e., names and values) to `self`, the new instance. When `__init__` is invoked, `self` is an object, but a \"naked\" object, without any attributes that make it special. Our job in `__init__` is to assign to `self`, one at a time, the attributes that'll make it truly an object of type `Person`.\n",
+    "8. `__init__` doesn't return any value. The assignments to `self` are enough."
    ]
   },
   {
