--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -650,13 +650,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Person:\n",
     "    def __init__(self, first_name, last_name, shoe_size):\n",
-    "        "
+    "        self.first_name = first_name     # take the value in the first_name parameter, and assign it to a new attribute on self\n",
+    "        self.last_name = last_name\n",
+    "        self.shoe_size = shoe_size"
    ]
   },
   {
@@ -672,7 +674,37 @@
     "5. `__init__` is a special method, a *magic* method, that is invoked by Python automatically when we create a new instance. We'll talk about that in a moment.\n",
     "6. We define our `__init__` with four parameters: `self` (which is mandatory for any method), then three more parameters. `self` will be assigned the instance of `Person` on which we're running, and that'll happen automatically. The other three parameters get their values from the arguments we pass to `Person` when we invoke it.\n",
     "7. The job of `__init__` is to assign attributes (i.e., names and values) to `self`, the new instance. When `__init__` is invoked, `self` is an object, but a \"naked\" object, without any attributes that make it special. Our job in `__init__` is to assign to `self`, one at a time, the attributes that'll make it truly an object of type `Person`.\n",
-    "8. `__init__` doesn't return any value. The assignments to `self` are enough."
+    "8. `__init__` doesn't return any value. The assignments to `self` are enough.\n",
+    "9. Do all of my parameters need to be used in assigning to `self`? No, but that's common. Can I assign attributes to `self` that have nothing to do with the parameters? Yes, and that's fine."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = Person('Reuven', 'Lerner', 46)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Reuven'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.first_name      # I'm retrieving first_name from p!  Because it was assigned, I can retrieve it!"
    ]
   },
   {
