--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -708,11 +708,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Variables vs. attributes\n",
+    "\n",
+    "Python has *two* different storage mechanisms for values:\n",
+    "\n",
+    "- Variables, which can be local (in a function) or global (available everywhere)\n",
+    "- Attributes, which are connected to a particular object. You can think of attributes as a private dict on each value in Python. \n",
+    "\n",
+    "How can you tell the difference? Because attributes are tied to a particular object, you need to say both the object and the attribute; you cannot just say the attribute. The way you do that is with a `.`.\n",
+    "\n",
+    "When I ask for `p.first_name`, I'm asking `p` (the Person object) to give me the value of its `first_name` attribute. Fortunately, that was assigned back in `__init__`."
+   ]
   }
  ],
  "metadata": {
