--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -720,8 +720,21 @@
     "\n",
     "How can you tell the difference? Because attributes are tied to a particular object, you need to say both the object and the attribute; you cannot just say the attribute. The way you do that is with a `.`.\n",
     "\n",
-    "When I ask for `p.first_name`, I'm asking `p` (the Person object) to give me the value of its `first_name` attribute. Fortunately, that was assigned back in `__init__`."
+    "When I ask for `p.first_name`, I'm asking `p` (the Person object) to give me the value of its `first_name` attribute. Fortunately, that was assigned back in `__init__`.\n",
+    "\n",
+    "Asking for `p.first_name` means that Python turns to `p` and says: Do you have an attribute `first_name`? This has *NOTHING* to do with local or global variables. (`p` is a global variable, but `first_name` is an attribute on `p`.)\n",
+    "\n",
+    "Objects in Python use attributes a *lot*. Every time you see a `.`, that means: We're asking an object for its attribute.\n",
+    "\n",
+    "Other programming languages talk about \"instance variables\" and \"class variables.\" Many instructors in Python use this terminology also. I prefer not to do so, because the moment you understand that these are all attributes, the language becomes more obviously consistent and easier to understand."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
