--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -730,6 +730,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Namespace\n",
+    "\n",
+    "A namespace is a collection of variables. Typically, Python has a global namespace and a local namespace (when a function is running). There is also a \"builtin\" namespace for names like `str`, `int`, `dict`, etc.\n",
+    "\n",
+    "It's true, though, that Python uses modules and classes as a form of namespace, also. However, those aren't for variables. They are, instead, for attributes. You can see that because if you use a class or a module, you'll be using lots of `.` characters between the module/class name and its attributes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
