--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -742,10 +742,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Person"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Variables vs. attributes\n",
+    "\n",
+    "- If you ask Python for the value of a global variable, wherever you are, it'll work. If you define `x = 5` outside of a function and class definition, then you can retrieve it from anywhere you want as `x`.\n",
+    "- If you ask Python for the value of a local variable, so long as you're in the function where it was defined, you're fine. But other places in the program won't know what you're talking about; the variable doesn't exist there.\n",
+    "\n",
+    "Attributes always exist, though -- and if you know what object the attribute is attached to, you can always retrieve it wit"
+   ]
   }
  ],
  "metadata": {
