--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -769,8 +769,15 @@
     "- If you ask Python for the value of a global variable, wherever you are, it'll work. If you define `x = 5` outside of a function and class definition, then you can retrieve it from anywhere you want as `x`.\n",
     "- If you ask Python for the value of a local variable, so long as you're in the function where it was defined, you're fine. But other places in the program won't know what you're talking about; the variable doesn't exist there.\n",
     "\n",
-    "Attributes always exist, though -- and if you know what object the attribute is attached to, you can always retrieve it wit"
+    "Attributes always exist, though -- and if you know what object the attribute is attached to, you can always retrieve it with `a.b` notation, where `a` is the value and `b` is the name of the attribute."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
