--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -774,10 +774,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.13.9 (main, Oct 14 2025, 21:10:40) [Clang 20.1.4 ]'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.version"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What really happens when we create a new instance of `Person`?\n",
+    "\n",
+    "1. We invoke `Person()`. That, in turn, tells Python that it needs to invoke the *constructor* method, the method that creates a new `Person` object. The constructor in Python is **NOT** `__init__`! It just isn't! Rather, the constructor method is called `__new__`. You will almost certainly never want to define this method yourself. This split between"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "p = Person('Reuven', 'Lerner', 46)"
+   ]
   }
  ],
  "metadata": {
