--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -799,7 +799,11 @@
    "source": [
     "# What really happens when we create a new instance of `Person`?\n",
     "\n",
-    "1. We invoke `Person()`. That, in turn, tells Python that it needs to invoke the *constructor* method, the method that creates a new `Person` object. The constructor in Python is **NOT** `__init__`! It just isn't! Rather, the constructor method is called `__new__`. You will almost certainly never want to define this method yourself. This split between"
+    "1. We invoke `Person()`. That, in turn, tells Python that it needs to invoke the *constructor* method, the method that creates a new `Person` object. The constructor in Python is **NOT** `__init__`! It just isn't! Rather, the constructor method is called `__new__`. You will almost certainly never want to define this method yourself.\n",
+    "2. This split between `__new__`, which creates a new object, and `__init__`, which assigns attributes to it, is straight from Smalltalk.\n",
+    "3. `__new__` creates a new object of type `Person`. But before returning this \"naked\" object to the caller, it first passes this new instance to `__init__`.\n",
+    "4. How does the instance get passed to `__init__`? Well, `__init__` is a function (method), and thus takes arguments. The first argument is assigned to be the new instance.\n",
+    "5. That first parameter, which gets the instance as an argument, could theoretically be called anything at all. But the Python tradition is to call it `self`, just lik ein "
    ]
   },
   {
