--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -803,7 +803,9 @@
     "2. This split between `__new__`, which creates a new object, and `__init__`, which assigns attributes to it, is straight from Smalltalk.\n",
     "3. `__new__` creates a new object of type `Person`. But before returning this \"naked\" object to the caller, it first passes this new instance to `__init__`.\n",
     "4. How does the instance get passed to `__init__`? Well, `__init__` is a function (method), and thus takes arguments. The first argument is assigned to be the new instance.\n",
-    "5. That first parameter, which gets the instance as an argument, could theoretically be called anything at all. But the Python tradition is to call it `self`, just lik ein "
+    "5. That first parameter, which gets the instance as an argument, could theoretically be called anything at all. But the Python tradition is to call it `self`, just like in Smalltalk. Again: You *could* call that first parameter something else. Don't do it.\n",
+    "6. Our `__init__` has four parameters. The first is supplied by Python with the instance, the rest are supplied by the user. This is true for *all* methods -- they all get `self` as the first argument.\n",
+    "7. "
    ]
   },
   {
