--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -805,7 +805,8 @@
     "4. How does the instance get passed to `__init__`? Well, `__init__` is a function (method), and thus takes arguments. The first argument is assigned to be the new instance.\n",
     "5. That first parameter, which gets the instance as an argument, could theoretically be called anything at all. But the Python tradition is to call it `self`, just like in Smalltalk. Again: You *could* call that first parameter something else. Don't do it.\n",
     "6. Our `__init__` has four parameters. The first is supplied by Python with the instance, the rest are supplied by the user. This is true for *all* methods -- they all get `self` as the first argument.\n",
-    "7. "
+    "7. Then inside of `__init__` we assign one or more attributes, often based on the parameters.\n",
+    "8. When `__init__` is done, we return to `__new__`, which returns the new object (`self`) to the caller. By this time, `self` has gotten a bunch of new attributes assigned to it."
    ]
   },
   {
