--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -811,11 +811,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'first_name': 'Reuven', 'last_name': 'Lerner', 'shoe_size': 46}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "p = Person('Reuven', 'Lerner', 46)"
+    "p = Person('Reuven', 'Lerner', 46)\n",
+    "\n",
+    "vars(p)   # show me the attributes on p!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise: Company class\n",
+    "\n",
+    "1. Define a new class called `Company` that takes the same arguments as we had in our tuple before\n",
+    "2. Each instance will thus have three attributes -- `name`, `url`, and `headcount`.\n",
+    "3. Create two instances of `Company`, one for each of the companies from before\n",
+    "4. Use `var"
    ]
   }
  ],
