--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -840,8 +840,16 @@
     "1. Define a new class called `Company` that takes the same arguments as we had in our tuple before\n",
     "2. Each instance will thus have three attributes -- `name`, `url`, and `headcount`.\n",
     "3. Create two instances of `Company`, one for each of the companies from before\n",
-    "4. Use `var"
+    "4. Use `vars` on each one to see its attributes\n",
+    "5. Don't worry (yet) about writing a method to get the name + URL back from the `Company` instance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
