--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -901,6 +901,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Methods\n",
+    "\n",
+    "We can define any methods we want inside of a class. The only rule is that the first parameter should be called `self`, and it will get the instance on which we're running. Thanks to having `self`, we can then retrieve attribute values from the object, and we can even set them on the object!\n",
+    "\n",
+    "Methods are functions, so they can use all of the parameter types and other tricks/techniques you know from defining Python functions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
