--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -913,6 +913,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, first_name, last_name, shoe_size):\n",
+    "        self.first_name = first_name     # take the value in the first_name parameter, and assign it to a new attribute on self\n",
+    "        self.last_name = last_name\n",
+    "        self.shoe_size = shoe_size\n",
+    "    def get_five(self):\n",
+    "        return 5\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = Person('Reuven', 'Lerner', 46)\n",
+    "\n",
+    "p.get_five()   # I'm invoking the method get_five, which only works on instances of Person!"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
