--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -989,11 +989,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Exercise: Add `link` method to your `Company` class\n",
+    "\n",
+    "Modify your `Company` class (or copy mine from the GitHub "
+   ]
   }
  ],
  "metadata": {
