--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -994,8 +994,17 @@
    "source": [
     "# Exercise: Add `link` method to your `Company` class\n",
     "\n",
-    "Modify your `Company` class (or copy mine from the GitHub "
+    "1. Modify your `Company` class (or copy mine from the GitHub repo) and add a new method, `link`, which returns both the URL and the name.\n",
+    "2. Re-define your two instances of `Company`\n",
+    "3. Invoke `link` on each instance of `Company`."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
