--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1001,6 +1001,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Company:\n",
+    "    def __init__(self, name, url, headcount):\n",
+    "        self.name = name\n",
+    "        self.url = url\n",
+    "        self.headcount = headcount\n",
+    "    def link(self):\n",
+    "        return f'{self.name}, {self.url}'\n",
+    "\n",
+    "company1 = Company('BigCo', 'https://bigco.com', 100_000)\n",
+    "company2 = Company('SmallCo', 'https://smallco.com', 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BigCo, https://bigco.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(company1.link())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SmallCo, https://smallco.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(company2.link())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
