--- a/OReilly - 2025-10October-20-objects.ipynb
+++ b/OReilly - 2025-10October-20-objects.ipynb
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1049,6 +1049,17 @@
    ],
    "source": [
     "print(company2.link())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Next up\n",
+    "\n",
+    "1. Getters and setters\n",
+    "2. More writing methods\n",
+    "3. Writing more complex objects"
    ]
   },
   {
